--- a/app/(en)/globals.css
+++ b/app/(en)/globals.css
@@ -7,3 +7,9 @@ body,
   font-family: Arial, Helvetica, sans-serif;
   direction: ltr;
 }
+@layer utilities {
+  .stroke-text {
+    -webkit-text-stroke: 2px #22c55e; /* Green stroke */
+    color: transparent;
+  }
+}
